New HTG notebooks

--- a/notebooks/d_geosciences/High-Temperature Geochemistry/Rb-Sr_Decay.ipynb
+++ b/notebooks/d_geosciences/High-Temperature Geochemistry/Rb-Sr_Decay.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "hide-input"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "hide-input"
@@ -65,15 +65,7 @@
     "\n",
     "In terms of availablility, $Rb$ “follows” $K$, and is enriched in micas, K-feldspar, and clay minerals, whereas $Sr$ “follows” $Ca$, and is enriched in plagioclase, carbonates, and apatite.\n",
     "\n",
-    "In terms of mobility, $Sr$ is fairly and $Rb$ is strongly fluid-mobile.\n",
-    "\n",
-    "## Dating of Terrestrial Rocks\n",
-    "\n",
-    "The $Rb$-$Sr$ system was one of the first decay systems to be widely used in isotope geochemistry. **It is particularly useful for dating felsic igneous and metamorphic rocks of the continental crust.** Mantle-derived mafic and ultramafic rocks have low $Rb/Sr$ ratios, so they are difficult to date well with the $Rb$-$Sr$ decay system. \n",
-    "\n",
-    "Igneous differentiation is associated with increasing $Rb/Sr$ ratios when $Sr$ is removed from the melt by the crystallization of plagioclase whilst $Rb$ remains in the melt. Suites of differentiated igneous rocks therefore tend to have increasing $Rb/Sr$ ratios with increasing degree of differentiation. As a result, acidic rocks often have variable and generally high $Rb/Sr$ ratios of >1 (${^{87}Rb}{^{86}Sr}>\\,\\sim2.9$). Such rocks, and their metamorphic equivalents are therefore, in principle, well suited for dating with the $Rb$-$Sr$ system. $Sr$ and particularly $Rb$ are fluid-mobile elements, leading to complications in Rb/Sr dating can arise from (even) low-temperature aqueous alteration of the samples. The figure below shows $Rb$ vs. $Sr$ concentrations for various mafic, intermediate, and acidic igneous rocks. Igneous differentiation generates magmas with high $Rb$ contents combined with high $Rb/Sr$ ratios, and low $Sr$ concentrations (fractionation of plagioclase).\n",
-    "\n",
-    "![](images/RbSr2.png)"
+    "In terms of mobility, $Sr$ is fairly and $Rb$ is strongly fluid-mobile."
    ]
   },
   {
@@ -139,6 +131,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Dating of Terrestrial Rocks\n",
+    "\n",
+    "The $Rb$-$Sr$ system was one of the first decay systems to be widely used in isotope geochemistry. **It is particularly useful for dating felsic igneous and metamorphic rocks of the continental crust.** Mantle-derived mafic and ultramafic rocks have low $Rb/Sr$ ratios, so they are difficult to date well with the $Rb$-$Sr$ decay system. \n",
+    "\n",
+    "Igneous differentiation is associated with increasing $Rb/Sr$ ratios when $Sr$ is removed from the melt by the crystallization of plagioclase whilst $Rb$ remains in the melt. Suites of differentiated igneous rocks therefore tend to have increasing $Rb/Sr$ ratios with increasing degree of differentiation. As a result, acidic rocks often have variable and generally high $Rb/Sr$ ratios of >1 (${^{87}Rb}{^{86}Sr}>\\,\\sim2.9$). Such rocks, and their metamorphic equivalents are therefore, in principle, well suited for dating with the $Rb$-$Sr$ system. $Sr$ and particularly $Rb$ are fluid-mobile elements, leading to complications in Rb/Sr dating can arise from (even) low-temperature aqueous alteration of the samples. The figure below shows $Rb$ vs. $Sr$ concentrations for various mafic, intermediate, and acidic igneous rocks. Igneous differentiation generates magmas with high $Rb$ contents combined with high $Rb/Sr$ ratios, and low $Sr$ concentrations (fractionation of plagioclase).\n",
+    "\n",
+    "![](images/RbSr2.png)\n",
+    "\n",
+    "### Dating of Igneous Rocks\n",
+    "\n",
+    "In principle, two techniques can be used to date igneous rocks with the $Rb$-$Sr$ isochron method.\n",
+    "\n",
+    "1) A mineral isochron can be determined, which uses various minerals (with a range of $Rb/Sr$ ratios) that are separated from of a single large whole-rock sample.\n",
+    "2) A whole-rock isochron can be determined, which is based on results obtained for several large (about kg-sized) cogenetic whole-rock specimens that display a reasonable range of $Rb/Sr$ ratios. \n",
+    "\n",
+    "The whole-rock method is generally preferred and considered to provide reliable igneous formation ages because large whole rock samples are much less susceptible to isotopic resetting by regional or contact metamorphism than mineral separates.\n",
+    "\n",
+    "### Dating of Metamorphic Rocks\n",
+    "\n",
+    "Metamorphism can have a profound effect on the parent-daughter relationships of all isotopic decay systems, without necessarily being reflected in the mineralogy or texture of a rock. The $Rb$-$Sr$ system is particularly sensitive to such reactions due to the mobility of $Rb$ and $Sr$ in (metamorphic) fluids. If the metamorphic fluids in the rock remain static, the released elements (here $Rb$ and $Sr$) will be taken up by the nearest phase that can accommodate them.\n",
+    "\n",
+    "The figure below is an isotope evolution diagram over time from protolith formation to present-day. \n",
+    "\n",
+    "![](images/RbSr3.png)\n",
+    "\n",
+    "The isotopic evolution of a metamorphic rock can be described step-by-step as follows.\n",
+    "\n",
+    "1) Formation of a rock and its mineral phases biotite, K-feldspar, and $Rb$-free apatite at $t_0$.\n",
+    "2) Radiogenic ingrowth of $^{87}Sr$ occurs until $t_M$, when there is a metamorphic event\n",
+    "3) The metamorphism at $t_M$ is strong enough to fully re-equilibrate all minerals, resulting in isotopic homogenization. The isotope composition of the whole rock remains unchanged if the sample is large enough to act as a closed system.\n",
+    "4) The metamorphic event is over and the system cools. Isotopic closure occurs when the temperature is too low for diffusion. New radiogenic ingrowth of $^{87}Sr$, from $t_M$ until $t_P$, then again generates minerals with variable ${^{87}Sr}/{^{86}Sr}$, depending on the $Rb/Sr$ ratio.\n",
+    "\n",
+    "The *minerals* of a single whole rock sample will define a mineral isochron that provides the age of metamorphism. Several whole rock samples which act as closed systems and that have variable ${^{87}Rb}/{^{86}Sr}$ will define a whole rock isochron that provides the age of protolith crystallization.\n",
+    "\n",
+    "### Model ages\n",
+    "```{index} Model age\n",
+    "```\n",
+    "Model ages ($t_{model}$) are obtained by extending the isotope evolution line of a sample (mineral) back to its initial Sr isotope composition using the measured ${^{87}Rb}/{^{86}Sr}$ ratio, but a drawback is that the initial $Sr$ isotope composition must either be know or assumed/estimated.\n",
+    "\n",
+    "Mathematically, $Sr$ isotope model ages can be calculated using the known or estimated value of $({^{87}Sr}/{^{86}Sr})_0$ by re-arranging the general decay equation:\n",
+    "\n",
+    "$$t_{model} = \\frac{1}{\\lambda} \\ln\\left(1+\\left(\\frac{^{86}Sr}{^{87}Rb}\\right) \\left(\\left(\\frac{^{87}Sr}{^{86}Sr}\\right)_P - \\left(\\frac{^{87}Sr}{^{86}Sr}\\right)_0 \\right) \\right)$$\n",
+    "\n",
+    "In our example, the model ages calculated for the minerals relative to the initial ${^{87}Sr}/{^{86}Sr}$ at $t_0$, yield incorrect and discordant results. Discordant means that different ages are obtained for different mineral phases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Problem Set 4 - Question 2\n",
     "\n",
     "A very old basaltic lunar rock with an age of about $4.47\\,Gyr$ has a present-day $Sr$ isotope composition of ${^{87}Sr}/{^{86}Sr} = 0.70105$. If the formation of the Moon occurred $4.47\\,Gyr$ ago with an initial ${^{87}Sr}/{^{86}Sr}$ of $0.69897$, calculate the ${^{87}Rb}/{^{86}Sr}$ ratio of the lunar interior from which the rock was derived. The bulk Earth has a ${^{87}Rb}/{^{86}Sr}$ ratio of about $0.085$ (equivalent to $Rb/Sr = 0.03$). Speculate why the Earth and Moon (as characterized by the lunar interior that was sampled by the lunar basalt) may be so different in their ${^{87}Rb}/{^{86}Sr}$ ratios.\n",
@@ -152,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -206,38 +248,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_2908c_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Samples</th>        <th class=\"col_heading level0 col1\" >$${^{87}Rb}/{^{86}Sr}$$</th>        <th class=\"col_heading level0 col2\" >$${^{87}Sr}/{^{86}Sr}$$</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_d7aab_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Samples</th>        <th class=\"col_heading level0 col1\" >$${^{87}Rb}/{^{86}Sr}$$</th>        <th class=\"col_heading level0 col2\" >$${^{87}Sr}/{^{86}Sr}$$</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                                <td id=\"T_2908c_row0_col0\" class=\"data row0 col0\" >220-1 plagioclase</td>\n",
-       "                        <td id=\"T_2908c_row0_col1\" class=\"data row0 col1\" >0.024</td>\n",
-       "                        <td id=\"T_2908c_row0_col2\" class=\"data row0 col2\" >0.71627</td>\n",
+       "                                <td id=\"T_d7aab_row0_col0\" class=\"data row0 col0\" >220-1 plagioclase</td>\n",
+       "                        <td id=\"T_d7aab_row0_col1\" class=\"data row0 col1\" >0.024</td>\n",
+       "                        <td id=\"T_d7aab_row0_col2\" class=\"data row0 col2\" >0.71627</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_2908c_row1_col0\" class=\"data row1 col0\" >220-1 amphibole</td>\n",
-       "                        <td id=\"T_2908c_row1_col1\" class=\"data row1 col1\" >1.479</td>\n",
-       "                        <td id=\"T_2908c_row1_col2\" class=\"data row1 col2\" >0.72635</td>\n",
+       "                                <td id=\"T_d7aab_row1_col0\" class=\"data row1 col0\" >220-1 amphibole</td>\n",
+       "                        <td id=\"T_d7aab_row1_col1\" class=\"data row1 col1\" >1.479</td>\n",
+       "                        <td id=\"T_d7aab_row1_col2\" class=\"data row1 col2\" >0.72635</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_2908c_row2_col0\" class=\"data row2 col0\" >220-1 whole-rock</td>\n",
-       "                        <td id=\"T_2908c_row2_col1\" class=\"data row2 col1\" >2.049</td>\n",
-       "                        <td id=\"T_2908c_row2_col2\" class=\"data row2 col2\" >0.73022</td>\n",
+       "                                <td id=\"T_d7aab_row2_col0\" class=\"data row2 col0\" >220-1 whole-rock</td>\n",
+       "                        <td id=\"T_d7aab_row2_col1\" class=\"data row2 col1\" >2.049</td>\n",
+       "                        <td id=\"T_d7aab_row2_col2\" class=\"data row2 col2\" >0.73022</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_2908c_row3_col0\" class=\"data row3 col0\" >220-1 K-feldspar</td>\n",
-       "                        <td id=\"T_2908c_row3_col1\" class=\"data row3 col1\" >2.601</td>\n",
-       "                        <td id=\"T_2908c_row3_col2\" class=\"data row3 col2\" >0.73412</td>\n",
+       "                                <td id=\"T_d7aab_row3_col0\" class=\"data row3 col0\" >220-1 K-feldspar</td>\n",
+       "                        <td id=\"T_d7aab_row3_col1\" class=\"data row3 col1\" >2.601</td>\n",
+       "                        <td id=\"T_d7aab_row3_col2\" class=\"data row3 col2\" >0.73412</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1e28ccfa7f0>"
+       "<pandas.io.formats.style.Styler at 0x20bdca647c0>"
       ]
      },
      "metadata": {},
@@ -261,16 +303,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e28ed1dbb0>"
+       "<matplotlib.legend.Legend at 0x20bdcf4ce80>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -318,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
