--- a/notebooks/d_geosciences/High-Temperature Geochemistry/Sm-Nd_Decay.ipynb
+++ b/notebooks/d_geosciences/High-Temperature Geochemistry/Sm-Nd_Decay.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "tags": [
      "hide-input"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {
     "tags": [
      "hide-input"
@@ -73,14 +73,12 @@
     "\n",
     "Due to the fluid immobility of the $REEs$, $Sm$-$Nd$ ages and initial $Nd$ isotope compositions are not very sensitive to weathering and metamorphism. \n",
     "\n",
-    "Notice how the $Sm$-$Nd$ system is opposite to the $Rb$-$Sr$ decay system in many ways! \n",
-    "\n",
-    "..."
+    "Notice how the $Sm$-$Nd$ system is opposite to the $Rb$-$Sr$ decay system in many ways! \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,33 +108,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_9acd9_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Samples</th>        <th class=\"col_heading level0 col1\" >$${^{147}Sm}/{^{144}Nd}$$</th>        <th class=\"col_heading level0 col2\" >$${^{143}Nd}/{^{144}Nd}$$</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_854de_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Samples</th>        <th class=\"col_heading level0 col1\" >$${^{147}Sm}/{^{144}Nd}$$</th>        <th class=\"col_heading level0 col2\" >$${^{143}Nd}/{^{144}Nd}$$</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                                <td id=\"T_9acd9_row0_col0\" class=\"data row0 col0\" >Whole rock</td>\n",
-       "                        <td id=\"T_9acd9_row0_col1\" class=\"data row0 col1\" >0.2090</td>\n",
-       "                        <td id=\"T_9acd9_row0_col2\" class=\"data row0 col2\" >0.513142</td>\n",
+       "                                <td id=\"T_854de_row0_col0\" class=\"data row0 col0\" >Whole rock</td>\n",
+       "                        <td id=\"T_854de_row0_col1\" class=\"data row0 col1\" >0.2090</td>\n",
+       "                        <td id=\"T_854de_row0_col2\" class=\"data row0 col2\" >0.513142</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_9acd9_row1_col0\" class=\"data row1 col0\" >Plagioclase</td>\n",
-       "                        <td id=\"T_9acd9_row1_col1\" class=\"data row1 col1\" >0.1727</td>\n",
-       "                        <td id=\"T_9acd9_row1_col2\" class=\"data row1 col2\" >0.512365</td>\n",
+       "                                <td id=\"T_854de_row1_col0\" class=\"data row1 col0\" >Plagioclase</td>\n",
+       "                        <td id=\"T_854de_row1_col1\" class=\"data row1 col1\" >0.1727</td>\n",
+       "                        <td id=\"T_854de_row1_col2\" class=\"data row1 col2\" >0.512365</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_9acd9_row2_col0\" class=\"data row2 col0\" >Pyroxene</td>\n",
-       "                        <td id=\"T_9acd9_row2_col1\" class=\"data row2 col1\" >0.2434</td>\n",
-       "                        <td id=\"T_9acd9_row2_col2\" class=\"data row2 col2\" >0.513861</td>\n",
+       "                                <td id=\"T_854de_row2_col0\" class=\"data row2 col0\" >Pyroxene</td>\n",
+       "                        <td id=\"T_854de_row2_col1\" class=\"data row2 col1\" >0.2434</td>\n",
+       "                        <td id=\"T_854de_row2_col2\" class=\"data row2 col2\" >0.513861</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x207d2383520>"
+       "<pandas.io.formats.style.Styler at 0x1dbeee52820>"
       ]
      },
      "metadata": {},
@@ -166,7 +164,7 @@
     "\n",
     "b) Determine the age and initial ${^{143}Nd}/{^{144}Nd}$ ratio of this rock from the slope and y-intercept of the isochron.\n",
     "\n",
-    "c) Calculate the $Nd$ isotope ratio of $CHUR$ for the age of rock.\n",
+    "c) Calculate the $Nd$ isotope ratio of CHUR for the age of rock.\n",
     "\n",
     "d) Express the initial $Nd$ isotope composition of the rock as an $\\epsilon_{Nd}$ value relative to $CHUR$. What does the initial $\\epsilon_{Nd}$ value tell you, if you assume that the Moon as a whole has chondritic $Sm/Nd$ and $Nd$ isotope ratios?"
    ]
@@ -180,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x207d567e370>"
+       "<matplotlib.legend.Legend at 0x1dbef32b430>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -239,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +245,7 @@
      "output_type": "stream",
      "text": [
       "The age implied by the isochron is 3.20e+09 yr.\n",
-      "The initial Nd-143/Nd-144 ratio is 0.509.\n"
+      "The initial Nd-143/Nd-144 ratio is 0.508713.\n"
      ]
     }
    ],
@@ -259,14 +257,173 @@
     "b = y_intercept  # initial Nd143/Nd144 ratio\n",
     "# print answers\n",
     "print(\"The age implied by the isochron is %.2e yr.\" % t)\n",
-    "print(\"The initial Nd-143/Nd-144 ratio is %.3f.\" % b)"
+    "print(\"The initial Nd-143/Nd-144 ratio is %.6f.\" % b)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c) "
+    "As the distribution and evolution of $Sm$ and $Nd$ in the Earth are not explained in this page where we focus on quantitative parts, we will recall the concepts of CHUR and $\\epsilon_{Nd}$ from the lecture slide before attempting questions c and d.\n",
+    "\n",
+    "CHUR (Chondritic Uniform Reservoir) is defined by the average present-day Sm/Nd ratio and Nd isotope composition of chondritic meteorites. It is representative for the $Nd$ isotope composition and evolution of the bulk Earth and bulk silicate Earth. The present-day $Nd$ isotope composition of chondrites is $({^{143}Nd}/{^{144}Nd})_{CHUR} = 0.512638$. The average $({^{147}Sm}/{^{144}Nd})_{CHUR} = 0.1967$. \n",
+    "\n",
+    "It is convenient to consider past and present variations in $Nd$ isotope compositions relative to the isotopic evolution of CHUR. This is done using the $\\epsilon$ notation: \n",
+    "\n",
+    "$$\\epsilon_{Nd} = \\frac{({^{143}Nd}/{^{144}Nd}) - ({^{143}Nd}/{^{144}Nd})_{CHUR}}{({^{143}Nd}/{^{144}Nd})_{CHUR}} \\times 10^4$$\n",
+    "\n",
+    "$\\epsilon_{Nd}$ values denote relative differences in $Nd$ isotope compositions (relative to CHUR) in parts per $10,000$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c) From b), the age of the basalt is $3.20\\,Gyr$. So, in this question, we are going to calculate $({^{143}Nd}/{^{144}Nd})_{CHUR}$ at $3.20\\,Gya$ using the $Sm$-$Nd$ decay equation (very similar to $Rb$-$Sr$ decay equation):\n",
+    "\n",
+    "$$\\frac{^{143}Nd}{^{144}Nd} = \\left(\\frac{^{143}Nd}{^{144}Nd}\\right)_0 + \\frac{^{147}Sm}{^{144}Nd}(e^{\\lambda t} - 1)$$\n",
+    "\n",
+    "In this case:\n",
+    "\n",
+    "$\\quad {^{143}Nd}/{^{144}Nd} = ({^{143}Nd}/{^{144}Nd})_{CHUR,\\,present} = 0.512638$\n",
+    "\n",
+    "$\\quad ({^{143}Nd}/{^{144}Nd})_0 = ({^{143}Nd}/{^{144}Nd})_{CHUR,\\,3.20\\,Gyr} =$ haven't know yet\n",
+    "\n",
+    "$\\quad {^{147}Sm}/{^{144}Nd} = ({^{147}Sm}/{^{144}Nd})_{CHUR,\\,present} = 0.1967$\n",
+    "\n",
+    "$\\quad \\lambda = 6.54 \\times 10^{-12}\\,yr^{-1}$\n",
+    "\n",
+    "$\\quad t = 3.20 \\times 10^9\\,yr$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Nd isotope ratio of CHUR at 3.20 Gya is 0.508478.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 1c\n",
+    "\n",
+    "# Given values\n",
+    "Nd143_Nd144_ratio = 0.512638\n",
+    "Sm147_Nd144_ratio = 0.1967\n",
+    "t = 3.2 * 10**9  # yr\n",
+    "initial_Nd_ratio_CHUR = Sm_Nd_decay_equation(Nd143_Nd144_ratio, '?', Sm147_Nd144_ratio, t)  # Nd isotope ratio of CHUR at 3.20 Gya\n",
+    "# print answer\n",
+    "print(\"The Nd isotope ratio of CHUR at 3.20 Gya is %g.\" % round_to_n_sf(initial_Nd_ratio_CHUR, 6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d) \n",
+    "\n",
+    "From b), the initial $Nd$ isotope ratio of the rock is $0.508713$.\n",
+    "\n",
+    "From c), the initial $Nd$ isotope ratio of CHUR is $0.508478$.\n",
+    "\n",
+    "Calculate the initial value of $\\epsilon_{Nd}$ (at $t = 3.20\\,Gyr$)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The initial differences in Nd isotope compositions (relative to CHUR) of the rock in parts per 10,000 is 4.62.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# function to calculate epsilon Nd\n",
+    "def epsilon_Nd(Nd_ratio_rock, Nd_ratio_CHUR):\n",
+    "    return (Nd_ratio_rock - Nd_ratio_CHUR)/Nd_ratio_CHUR * 10000\n",
+    "\n",
+    "\n",
+    "# Question 1d\n",
+    "\n",
+    "# Given values\n",
+    "initial_Nd_ratio_rock = 0.508713\n",
+    "initial_Nd_ratio_CHUR = 0.508478\n",
+    "# print answer\n",
+    "print(\"The initial differences in Nd isotope compositions (relative to CHUR) of the rock in parts per 10,000 is %g.\" \\\n",
+    "      % round_to_n_sf(epsilon_Nd(initial_Nd_ratio_rock, initial_Nd_ratio_CHUR), 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The positive $\\epsilon_{Nd}$ initial value means that the rock comes from a depleted source. The depleted source is probably the lunar mantle, which was depleted by the formation of the lunar crust."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 2\n",
+    "\n",
+    "Neodymium model ages or crustal residence ages are obtained by calculating the intersection of the $Nd$ isotope evolution of a rock sample with the $Nd$ isotope evolution of a reservoir (RES) that is assumed to have a composition akin to CHUR (for $t_{CHUR}$) or a depleted mantle (DM) composition (for $t_{DM}$).\n",
+    "\n",
+    "The respective Nd isotope evolutions evolution curves are given by:\n",
+    "\n",
+    "Sample:  $$\\left(\\frac{^{143}Nd}{^{144}Nd}\\right)_{Sam} = \\left(\\frac{^{143}Nd}{^{144}Nd}\\right)_{Sam,0} + \\left(\\frac{^{147}Sm}{^{144}Nd}\\right)_{Sam}(e^{\\lambda t} - 1)$$\n",
+    "\n",
+    "CHUR or DM reservoir: $$\\left(\\frac{^{143}Nd}{^{144}Nd}\\right)_{Res} = \\left(\\frac{^{143}Nd}{^{144}Nd}\\right)_{Res,0} + \\left(\\frac{^{147}Sm}{^{144}Nd}\\right)_{Res}(e^{\\lambda t} - 1)$$\n",
+    "\n",
+    "The intersections is obtained by equating $\\left(\\frac{^{143}Nd}{^{144}Nd}\\right)_{Sam,0} = \\left(\\frac{^{143}Nd}{^{144}Nd}\\right)_{Res,0}$\n",
+    "\n",
+    "After rearranging this yields for $t$:\n",
+    "\n",
+    "$$t = \\frac{1}{\\lambda} \\ln\\left(\\frac{\\left(\\frac{^{143}Nd}{^{144}Nd}\\right)_{Sam} - \\left(\\frac{^{143}Nd}{^{144}Nd}\\right)_{Res}}{\\left(\\frac{^{147}Sm}{^{144}Nd}\\right)_{Sam} - \\left(\\frac{^{147}Sm}{^{144}Nd}\\right)_{Res}} + 1\\right)$$\n",
+    "\n",
+    "Calculate the $t_{DM}$ for a sample characterized by ${^{147}Sm}/{^{144}Nd} = 0.102$ and ${^{143}Nd}/{^{144}Nd} =\n",
+    "0.511552$. The depleted mantle is assumed be characterized by ${^{147}Sm}/{^{144}Nd} = 0.222$ and ${^{143}Nd}/{^{144}Nd} =\n",
+    "\n",
+    "0.513114$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Nd model age is 1.98e+09 yrs.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 2 \n",
+    "\n",
+    "# decay constant of Sm-147\n",
+    "decay_const = 6.54 * 10**-12  # yr^-1  \n",
+    "# isotopic ratios of the sample\n",
+    "Sm147_Nd144_ratio_sample = 0.102\n",
+    "Nd143_Nd144_ratio_sample = 0.511552\n",
+    "# isotopic ratios of the depleted mantle\n",
+    "Sm147_Nd144_ratio_DM = 0.222\n",
+    "Nd143_Nd144_ratio_DM = 0.513114\n",
+    "# calculate t\n",
+    "t = (1/decay_const) * np.log(((Nd143_Nd144_ratio_sample - Nd143_Nd144_ratio_DM)/(Sm147_Nd144_ratio_sample - Sm147_Nd144_ratio_DM)) + 1)\n",
+    "# print answer\n",
+    "print(\"The Nd model age is %.2e yrs.\" % t)"
    ]
   },
   {
