new HTG notebooks

--- a/notebooks/d_geosciences/High-Temperature Geochemistry/Melting_and_Crystalisation.ipynb
+++ b/notebooks/d_geosciences/High-Temperature Geochemistry/Melting_and_Crystalisation.ipynb
@@ -265,7 +265,7 @@
     "\n",
     "An **aggregate liquid** can be produced by mixing the various melt increments that are formed over the melting interval $F = 0$ to $F$. \n",
     "\n",
-    "$$\\frac{C_{L, aggregate}}{C_0} = \\int_{0}^{F}\\frac{C_{L, increment}}{C_0}dF = \\int_{0}^{F}\\frac{1}{D}(1-F)^{\\frac{1}{D}-1}dF$$\n",
+    "$$\\frac{C_{L, aggregate}}{C_0} = \\frac{\\int_{0}^{F}\\frac{C_{L, increment}}{C_0}dF}{F-0} = \\frac{\\int_{0}^{F}\\frac{1}{D}(1-F)^{\\frac{1}{D}-1}dF}{F-0}$$\n",
     "\n",
     "So, the composition of this aggregate liquid is given by:\n",
     "\n",
@@ -508,7 +508,7 @@
     "\n",
     "The mean trace element concentration of a crystal that is formed by crystallization between $F = 1$ and $F$ is\n",
     "\n",
-    "$$\\frac{C_{S, aggregate}}{C_0} = \\int_{F}^{1}\\frac{C_{S, increment}}{C_0}dF = \\int_{F}^{1}DF^{D-1}dF$$\n",
+    "$$\\frac{C_{S, aggregate}}{C_0} = \\frac{\\int_{F}^{1}\\frac{C_{S, increment}}{C_0}dF}{1-F} = \\frac{\\int_{F}^{1}DF^{D-1}dF}{1-F}$$\n",
     "\n",
     "$$\\therefore \\frac{C_{S, aggregate}}{C_0} = \\frac{1-F^D}{1-F}$$\n",
     "\n"
